header og footer på alle 3 sider

--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
 
     </header>
     <main>
-        <h1>hej</h1>
+        <li><a href="sub-category.html">Sub-Category</a></li>
+        <li><a href="single-view.html">Single-Veiw</a></li>
+
+
+        <h1>Forside/Category</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ipsa voluptas temporibus sequi voluptatem. Vel
             adipisci doloribus error asperiores, quisquam consequatur dolor dolore temporibus dolores voluptatem? Illo
             id sequi officia.
@@ -94,7 +98,7 @@
             saepe incidunt officiis.
             Quaerat exercitationem earum tenetur quae natus architecto itaque hic omnis eum illum deserunt deleniti quas
             aperiam voluptatem nisi dolore eos dolores, voluptates molestias! Magni tempora deleniti qui fugiat numquam
-            perspiciatis./p>
+            perspiciatis.</p>
     </main>
     <footer>
 
