--- a/sub-category.html
+++ b/sub-category.html
@@ -12,7 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-    <title>Single-Veiw</title>
+    <title>Sub-Category</title>
 </head>
 
 <body>
@@ -69,10 +69,9 @@
     </header>
     <main>
         <li><a href="index.html">Forside/Category</a></li>
-        <li><a href="sub-category.html">Sub-Category</a></li>
+        <li><a href="single-view.html">Single-Veiw</a></li>
 
-
-        <h1>Single-Veiw</h1>
+        <h1>Sub-Category</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ipsa voluptas temporibus sequi voluptatem. Vel
             adipisci doloribus error asperiores, quisquam consequatur dolor dolore temporibus dolores voluptatem? Illo
             id sequi officia.
