lidt forside gøgl og opdatering af header og footer

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
                 <a href="index.html"><img src="logo-small.png" alt="logo"></a>
 
+
             </div>
             <div class="desktop">
 
@@ -68,37 +69,54 @@
 
     </header>
     <main>
-        <li><a href="sub-category.html">Sub-Category</a></li>
-        <li><a href="single-view.html">Single-Veiw</a></li>
+        <img src="tech-story-lab-3-bred.jpg.webp" alt="hero image" style="width: 100%; height: auto;">
+        <ul>
+            <li><a href="sub-category.html">Sub-Category</a></li>
+            <li><a href="single-view.html">Single-Veiw</a></li>
 
+        </ul>
 
-        <h1>Forside/Category</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ipsa voluptas temporibus sequi voluptatem. Vel
-            adipisci doloribus error asperiores, quisquam consequatur dolor dolore temporibus dolores voluptatem? Illo
-            id sequi officia.
-            Iusto necessitatibus aperiam debitis quod incidunt magnam dolorum quos eum, soluta nostrum, accusamus cum
-            minima? Quam consequatur ab nostrum corporis sint laborum, libero blanditiis nulla placeat quae! Impedit,
-            quidem aut?
-            Minus voluptates maiores neque nihil qui, beatae, molestiae possimus perspiciatis explicabo animi ipsum.
-            Nobis unde tempora, fugit deserunt, officia mollitia ipsum explicabo, aliquam nesciunt corrupti aspernatur
-            fuga molestias repudiandae? Et!
-            Minima eaque consectetur inventore molestiae rem similique beatae totam quam, sunt maxime doloremque neque
-            enim delectus quaerat at voluptates molestias perspiciatis illo est. Nemo dolores officiis dicta, facilis
-            dolore sequi?
-            Animi pariatur impedit rem laboriosam fugiat? Placeat illum rem itaque commodi quibusdam odio est tempora
-            eos culpa porro nesciunt, sint aliquid nemo et labore delectus accusantium ex alias, dolore quo.
-            Eos quidem sapiente laborum sint animi eligendi repudiandae quis itaque esse iste odit molestiae recusandae
-            a, ea provident, hic facere temporibus quia reiciendis quod inventore numquam qui. Non, facilis sequi.
-            Non commodi quod dignissimos numquam id quia perspiciatis, porro assumenda inventore quas? Itaque, eius
-            ullam? Omnis aliquid porro minima sunt voluptatem, vitae sequi, commodi quia ea eveniet iure in cumque!
-            Qui cupiditate officia repellendus voluptate nemo, quaerat molestias architecto iste. In odio eum fugiat id,
-            hic nemo vero ab odit rem aliquid laborum voluptatibus nobis nihil harum magnam quibusdam pariatur.
-            Obcaecati, ducimus perspiciatis ratione nemo vitae neque veritatis quidem eum itaque assumenda dignissimos
-            sequi exercitationem magnam ipsum deserunt quod. Aliquid accusantium debitis alias nemo qui cumque rerum
-            saepe incidunt officiis.
-            Quaerat exercitationem earum tenetur quae natus architecto itaque hic omnis eum illum deserunt deleniti quas
-            aperiam voluptatem nisi dolore eos dolores, voluptates molestias! Magni tempora deleniti qui fugiat numquam
-            perspiciatis.</p>
+        <section>
+            <div>
+                <h1>Tech & Story Lab</h1>
+                <h3>Tech & Story Lab er et lab med fokus på ny teknologi for KEAs studerende, undervisere og øvrige
+                    ansatte.
+                </h3>
+            </div>
+            <div>
+                <p>I Tech & Story Lab kan du eksperimentere med ny teknologi og på egen hånd lære at arbejde med
+                    forskelligt
+                    udstyr. Vi har
+                    alt lige fra kameraer, mikrofoner og lysudstyr til VR-gear, AI-teknologier, RaspberryPi’s og meget
+                    mere.
+
+                    Du kan låne et stort udvalg af udstyr og få kyndig vejledning i brugen af det.
+                </p>
+                <p>Åbningstider
+
+                    Mandag-torsdag: 9.00-16.00
+
+                    Fredag: 9.00-15.00
+
+                    Frederick Lehmann Rosling
+                    Frederick Lehmann Rosling
+                    T: 46 46 04 42
+                    E: techandstorylab@kea.dk
+                </p>
+            </div>
+
+        </section>
+        <section>
+            <h2>Adgang til labbet</h2>
+
+            <p>Tech & Story Lab er åbent for alle studerende, undervisere og øvrige ansatte på KEA.
+
+                Du finder os på Guldbergsgade 29N, 2200 KBH N, i stueplan bag receptionen. Vi har åbent mandag-fredag
+                fra kl. 09-15.
+
+                Har du spørgsmål til Tech & Story Lab, er du altid velkommen til at kigge forbi eller sende os en mail.
+            </p>
+        </section>
     </main>
     <footer>
 
@@ -114,10 +132,12 @@
                 <a href="#"><i class="fa fa-twitter"></i></a>
                 <a href="#"><i class="fa fa-youtube"></i></a>
                 <p><a title="Find vores podcasts på Podbean" href="http://keacph.podbean.com" target="_blank"
-                        rel="noopener" onclick="saAutomatedLink(this, 'outbound');"><img
-                            style="width: 150px; height: 56px; border: none;"
-                            src="//www.podbean.com/images/badges/w600.png" alt="Download app'en til Podbean"></a>
+                        rel="noopener" onclick="saAutomatedLink(this, 'outbound');">
+                        <img style="width: 150px; height: 56px; border: none; float: left;"
+                            src="//www.podbean.com/images/badges/w600.png" alt="Download app'en til Podbean">
+                    </a>
                 </p>
+
             </div>
 
             <div class="row">
@@ -163,6 +183,7 @@
                     </li>
                     <li><a href="/studiehandbog/adresser">Find vej på KEA</a></li>
                 </ul>
+
             </div>
         </div>
     </footer>
