--- a/single-view.html
+++ b/single-view.html
@@ -72,33 +72,8 @@
         <li><a href="sub-category.html">Sub-Category</a></li>
 
 
-        <h1>Single-Veiw</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ipsa voluptas temporibus sequi voluptatem. Vel
-            adipisci doloribus error asperiores, quisquam consequatur dolor dolore temporibus dolores voluptatem? Illo
-            id sequi officia.
-            Iusto necessitatibus aperiam debitis quod incidunt magnam dolorum quos eum, soluta nostrum, accusamus cum
-            minima? Quam consequatur ab nostrum corporis sint laborum, libero blanditiis nulla placeat quae! Impedit,
-            quidem aut?
-            Minus voluptates maiores neque nihil qui, beatae, molestiae possimus perspiciatis explicabo animi ipsum.
-            Nobis unde tempora, fugit deserunt, officia mollitia ipsum explicabo, aliquam nesciunt corrupti aspernatur
-            fuga molestias repudiandae? Et!
-            Minima eaque consectetur inventore molestiae rem similique beatae totam quam, sunt maxime doloremque neque
-            enim delectus quaerat at voluptates molestias perspiciatis illo est. Nemo dolores officiis dicta, facilis
-            dolore sequi?
-            Animi pariatur impedit rem laboriosam fugiat? Placeat illum rem itaque commodi quibusdam odio est tempora
-            eos culpa porro nesciunt, sint aliquid nemo et labore delectus accusantium ex alias, dolore quo.
-            Eos quidem sapiente laborum sint animi eligendi repudiandae quis itaque esse iste odit molestiae recusandae
-            a, ea provident, hic facere temporibus quia reiciendis quod inventore numquam qui. Non, facilis sequi.
-            Non commodi quod dignissimos numquam id quia perspiciatis, porro assumenda inventore quas? Itaque, eius
-            ullam? Omnis aliquid porro minima sunt voluptatem, vitae sequi, commodi quia ea eveniet iure in cumque!
-            Qui cupiditate officia repellendus voluptate nemo, quaerat molestias architecto iste. In odio eum fugiat id,
-            hic nemo vero ab odit rem aliquid laborum voluptatibus nobis nihil harum magnam quibusdam pariatur.
-            Obcaecati, ducimus perspiciatis ratione nemo vitae neque veritatis quidem eum itaque assumenda dignissimos
-            sequi exercitationem magnam ipsum deserunt quod. Aliquid accusantium debitis alias nemo qui cumque rerum
-            saepe incidunt officiis.
-            Quaerat exercitationem earum tenetur quae natus architecto itaque hic omnis eum illum deserunt deleniti quas
-            aperiam voluptatem nisi dolore eos dolores, voluptates molestias! Magni tempora deleniti qui fugiat numquam
-            perspiciatis.</p>
+        <h1>Single-View</h1>
+        <p>Hej</p>
     </main>
     <footer>
 
