--- a/single-view.html
+++ b/single-view.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="single-view.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -72,8 +73,9 @@
         <li><a href="sub-category.html">Sub-Category</a></li>
 
 
-        <h1>Single-View</h1>
-        <p>Hej</p>
+        <div class="title_container">
+            <h1>test</h1>
+        </div>
         
     </main>
     <footer>
