--- a/sub-category.html
+++ b/sub-category.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="sub-category.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       rel="stylesheet"
@@ -79,15 +79,18 @@
       </div>
     </header>
     <main>
-      <li><a href="index.html">Forside/Category</a></li>
-      <li><a href="single-view.html">Single-Veiw</a></li>
+      <!--    <li><a href="index.html">Forside/Category</a></li>
+      <li><a href="single-view.html">Single-Veiw</a></li> -->
       <div class="container">
-        <template>
-          <article>
-            <div></div>
-            <div><p>Book Gear</p></div>
-          </article>
-        </template>
+        <article class="content">
+          <div class="h3-style">
+            <h3>Content Creator Gear</h3>
+          </div>
+          <div class="book-style"><p>Book Gear</p></div>
+          <div class="img-style">
+            <img src="image 5.jpg" alt="Kamera" />
+          </div>
+        </article>
       </div>
     </main>
     <footer>
