--- a/sub-category.html
+++ b/sub-category.html
@@ -82,15 +82,18 @@
       <!--    <li><a href="index.html">Forside/Category</a></li>
       <li><a href="single-view.html">Single-Veiw</a></li> -->
       <div class="container">
-        <article class="content">
-          <div class="h3-style">
-            <h3>Content Creator Gear</h3>
-          </div>
-          <div class="book-style"><p>Book Gear</p></div>
-          <div class="img-style">
-            <img src="image 5.jpg" alt="Kamera" />
-          </div>
-        </article>
+        <div class="content">
+          <span>Virtual Reality</span>
+        </div>
+        <template id="smallProductTemplate">
+          <ul class="list">
+            <li>
+              <a href="single-view.html">
+                <span class="icon">►</span> Head-mounted Display (HMD)</a
+              >
+            </li>
+          </ul>
+        </template>
       </div>
     </main>
     <footer>
