--- a/single-view.html
+++ b/single-view.html
@@ -74,7 +74,11 @@
 
 
         <div class="title_container">
-            <h1>test</h1>
+            <h1>Canon Eos R7 Mirrorless camera 18-150mm Lens</h1>
+        </div>
+        <div class="product_container">
+            <img src="" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam iusto excepturi error aspernatur ab sint rerum magni dicta. Distinctio accusamus sapiente amet delectus mollitia modi. Labore suscipit amet reprehenderit magnam?</p>
         </div>
         
     </main>
