--- a/single-view.html
+++ b/single-view.html
@@ -110,17 +110,18 @@
 
         <form class="single-view-form">
           <label for="navn"><i class="form_navn"></i> Navn</label>
-          <input type="text" id="f-name" name="firstname" />
+          <input type="text" id="f-name" name="firstname" required />
           <label for="email"><i class="form_email"></i> KEA Mail</label>
           <input
             type="text"
             id="f-email"
             name="email"
             placeholder="@stud.kea.dk"
+            required
           />
 
           <label for="dato">Vælg dato</label>
-          <input type="date" id="f-dato" name="dato" />
+          <input type="date" id="f-dato" name="dato" required />
 
           <label for="Antal">Antal</label>
           <input
