--- a/single-view.html
+++ b/single-view.html
@@ -86,55 +86,61 @@
       <li><a href="sub-category.html">Sub-Category</a></li>
 
       <div class="title_container">
-        <h1>Canon Eos R7 Mirrorless camera 18-150mm Lens</h1>
+        <h1 id="title_1">Canon Eos R7 Mirrorless camera 18-150mm Lens</h1>
       </div>
       <div class="product_container">
-        <img
-          id="canon-eos"
-          src="canon-eos-r7-m-18-150mm.webp"
-          alt="camera test billede"
-        />
-        <h2>Canon Eos R7</h2>
-        <p>
-          Canon EOS R7 er et spejlløst kamera med en 32,5 MP APS-C sensor og
-          hurtig autofokus, ideelt til action og detaljerede optagelser. Det
-          medfølgende 18-150mm objektiv giver alsidighed fra vidvinkel til
-          telefoto. Kameraet understøtter 4K video og har indbygget
-          billedstabilisering.
-        </p>
-
-        <p id="udlaand_p">
-          Ønsker du at låne dette udstyr? Udfyld nedenstående formular for at
-          reservere det!
-        </p>
-
-        <form class="single-view-form">
-          <label for="navn"><i class="form_navn"></i> Navn</label>
-          <input type="text" id="f-name" name="firstname" required />
-          <label for="email"><i class="form_email"></i> KEA Mail</label>
-          <input
-            type="text"
-            id="f-email"
-            name="email"
-            placeholder="@stud.kea.dk"
-            required
+        <div class="grid_1_1">
+          <img
+            id="placeholder_image"
+            src="landscape-placeholder-svgrepo-com.svg"
+            alt="placeholder test billede"
           />
+        </div>
+        <div class="grid_1_2">
+          <h2>Canon Eos R7</h2>
+          <div class="product_info">
+            <p>
+              Canon EOS R7 er et spejlløst kamera med en 32,5 MP APS-C sensor og
+              hurtig autofokus, ideelt til action og detaljerede optagelser. Det
+              medfølgende 18-150mm objektiv giver alsidighed fra vidvinkel til
+              telefoto. Kameraet understøtter 4K video og har indbygget
+              billedstabilisering.
+            </p>
 
-          <label for="dato">Vælg dato</label>
-          <input type="date" id="f-dato" name="dato" required />
+            <p id="udlaand_p">
+              Ønsker du at låne dette udstyr? Udfyld nedenstående formular for
+              at reservere det!
+            </p>
+          </div>
 
-          <label for="Antal">Antal</label>
-          <input
-            type="number"
-            id="f-Antal"
-            name="Antal"
-            min="1"
-            max="10"
-            required
-          />
+          <form class="single-view-form">
+            <label for="navn"><i class="form_navn"></i> Navn</label>
+            <input type="text" id="f-name" name="firstname" required />
+            <label for="email"><i class="form_email"></i> KEA Mail</label>
+            <input
+              type="text"
+              id="f-email"
+              name="email"
+              placeholder="@stud.kea.dk"
+              required
+            />
 
-          <button id="reserver_btn">Reserver</button>
-        </form>
+            <label for="dato">Vælg dato</label>
+            <input type="date" id="f-dato" name="dato" required />
+
+            <label for="Antal">Antal</label>
+            <input
+              type="number"
+              id="f-Antal"
+              name="Antal"
+              min="1"
+              max="10"
+              required
+            />
+
+            <button id="reserver_btn">Reserver</button>
+          </form>
+        </div>
       </div>
     </main>
     <footer>
