last commit fra oli maybe

--- a/index.html
+++ b/index.html
@@ -25,15 +25,10 @@
                 <div class="line"></div>
             </div>
             <div class="logo">
-
                 <a href="index.html"><img src="logo-small.png" alt="logo"></a>
-
-
             </div>
             <div class="desktop">
-
                 <a href="index.html"><img src="logo-main-black-single.png" alt="logo_main"></a>
-
             </div>
 
             <ul class="menu">
@@ -43,17 +38,13 @@
                 <li><a href="#">Internationale muligheder</a></li>
                 <li><a href="#">Studieliv og Faciliteter</a></li>
             </ul>
-
         </nav>
         <div class="mod-languages">
             <p>EN</p>
-
-
         </div>
         <div class="search">
-
-            <button type="submit" class="search-button"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-                    width="20" height="20" viewBox="0,0,256,256">
+            <button type="submit" class="search-button">
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0,0,256,256">
                     <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
                         stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
                         font-family="none" font-size="none" style="mix-blend-mode: normal">
@@ -63,86 +54,170 @@
                             </path>
                         </g>
                     </g>
-                </svg></button>
+                </svg>
+            </button>
         </div>
-
-
-
     </header>
     <main>
-        <img src="tech-story-lab-3-bred.jpg.webp" alt="hero image" style="width: 100%; height: auto;">
+        <img src="tech-story-lab-3-bred.jpg.webp" alt="hero image" style="width: 100%; height: auto">
         <ul>
-            <li><a href="sub-category.html">Sub-Category</a></li>
-            <li><a href="single-view.html">Single-Veiw</a></li>
 
+            <li><a href="sub-category.html">Sub-Category</a></li>
+
+            <li><a href="single-view.html">Single-Veiw</a></li>
         </ul>
 
         <section>
             <div>
                 <h1>Tech & Story Lab</h1>
-                <h3>Tech & Story Lab er et lab med fokus på ny teknologi for KEAs studerende, undervisere og øvrige
-                    ansatte.
-                </h3>
+
             </div>
-            <div>
-                <p>I Tech & Story Lab kan du eksperimentere med ny teknologi og på egen hånd lære at arbejde med
-                    forskelligt
-                    udstyr. Vi har
-                    alt lige fra kameraer, mikrofoner og lysudstyr til VR-gear, AI-teknologier, RaspberryPi’s og meget
-                    mere.
+            <div class="grid">
+                <div>
+                    <h3>
+                        Tech & Story Lab er et lab med fokus på ny teknologi for KEAs
+                        studerende, undervisere og øvrige ansatte.
+                    </h3>
+                    <p>
+                        I Tech & Story Lab kan du eksperimentere med ny teknologi og på egen
+                        hånd lære at arbejde med forskelligt udstyr. Vi har alt lige fra
+                        kameraer, mikrofoner og lysudstyr til VR-gear, AI-teknologier,
+                        RaspberryPi’s og meget mere.</p>
+                    <p> Du kan låne et stort udvalg af udstyr
+                        og få kyndig vejledning i brugen af det.
+                    </p>
 
-                    Du kan låne et stort udvalg af udstyr og få kyndig vejledning i brugen af det.
-                </p>
-                <p>Åbningstider
-
-                    Mandag-torsdag: 9.00-16.00
-
-                    Fredag: 9.00-15.00
-
-                    Frederick Lehmann Rosling
-                    Frederick Lehmann Rosling
-                    T: 46 46 04 42
-                    E: techandstorylab@kea.dk
-                </p>
+                </div>
+                <div class="aabningstider">
+                    <h2>Åbningstider</h2>
+                    <div>
+                        <p>Mandag-torsdag: 9.00-16.00</p>
+                        <p>Fredag: 9.00-15.00</p>
+                    </div>
+                </div>
             </div>
-
         </section>
         <section>
-            <h2>Adgang til labbet</h2>
 
-            <p>Tech & Story Lab er åbent for alle studerende, undervisere og øvrige ansatte på KEA.
+            <div class="grid">
+                <div>
+                    <h3>Udstyr i Tech & Story Lab</h3>
+                    <p>Du er altid velkommen til at kigge forbi os, hvis du leder efter særligt udstyr til dit projekt
+                        eller har brug for råd
+                        og vejledning.</p>
+                    <p>
+                        Ved du allerede på forhånd, hvilket udstyr du skal bruge, kan du se, om udstyret er ledigt i
+                        bookingmodulet. Vær dog
+                        opmærksom på, at bookingmodulet er vejledende - vi kan derfor ikke garantere, at alt udstyr er
+                        tilgængeligt.</p>
 
-                Du finder os på Guldbergsgade 29N, 2200 KBH N, i stueplan bag receptionen. Vi har åbent mandag-fredag
-                fra kl. 09-15.
+                    <p>For at booke og få udleveret udstyr skal du besøge os i Tech & Story Lab.</p>
+                </div>
+                <div class="adgang">
+                    <h2>Adgang til labbet</h2>
 
-                Har du spørgsmål til Tech & Story Lab, er du altid velkommen til at kigge forbi eller sende os en mail.
-            </p>
+                    <p>Tech & Story Lab er åbent for alle studerende, undervisere og øvrige ansatte på KEA.<br></p>
+                    <p>
+                        Du finder os på Guldbergsgade 29N, 2200 KBH N, i stueplan bag receptionen. Vi har åbent
+                        mandag-fredag
+                        fra kl. 09-15.<br>
+                    </p>
+                    <p>
+                        Har du spørgsmål til Tech & Story Lab, er du altid velkommen til at kigge forbi eller sende os
+                        en
+                        mail.
+                    </p>
+                </div>
+            </div>
         </section>
 
-        <section class="category">
-            <h2>Kategorier</h2>
-            <ul id="categoryList"></ul>
 
+        <section class="kategori">
 
-            <template id="productTemplate">
-                <li>
-                    <div class="flex">
-                        <div>
-                            <p><strong>Category:</strong> <span class="category"></span></p>
-                        </div>
+            <div class="container">
+                <h2 class="kat">Kategorier</h2>
+            </div>
+            <template>
+                <article class="content">
+                    <div class="h3-style">
+
+                        <h4>| Content Creator Gear</h4>
                     </div>
-                    <img src="">
-                </li>
-            </template>
+                    <div class="book-style">
+                        <a class="lille-p" href="sub-category.html">Book Gear</a>
+                    </div>
+                    <div class="img-style">
+                        <img src="image 5.jpg" alt="Kamera">
+                    </div>
 
-            <!-- TEMPLATE RENDER CONTAINER -->
-            <ul id="productContainer"></ul>
+                </article>
+            </template>
+            <article class="content">
+                <div class="h3-style">
+
+                    <h4>| Digital Accessories</h4>
+                </div>
+                <div class="book-style">
+                    <a class="lille-p" href="sub-category.html">Book Accessories
+                    </a>
+                </div>
+                <div class="img-style">
+                    <img src="image 5.jpg" alt="Photo">
+                </div>
+
+            </article>
+
+            <article class="content">
+                <div class="h3-style">
+
+                    <h4>| Devices</h4>
+                </div>
+                <div class="book-style">
+                    <a class="lille-p" href="sub-category.html">Book Devices
+                    </a>
+                </div>
+                <div class="img-style">
+                    <img src="image 5.jpg" alt="Photo">
+                </div>
+
+            </article>
+            <article class="content">
+                <div class="h3-style">
+
+                    <h4>| Future</h4>
+                </div>
+                <div class="book-style">
+                    <a class="lille-p" href="sub-category.html">Book Future
+                    </a>
+                </div>
+                <div class="img-style">
+                    <img src="image 5.jpg" alt="Photo">
+                </div>
+
+            </article>
+            <article class="content">
+                <div class="h3-style">
+
+                    <h4>| Studio</h4>
+                </div>
+                <div class="book-style">
+                    <a class="lille-p" href="sub-category.html">Book Studio-products
+                    </a>
+                </div>
+                <div class="img-style">
+                    <img src="image 5.jpg" alt="Photo">
+                </div>
+
+            </article>
+
         </section>
+
+
+
+
     </main>
     <footer>
-
         <div class="footer">
-
             <div class="row">
                 <h3>KEA - Københavns Erhvervsakademi</h3>
                 <p>Guldbergsgade 29N<br>2200 København N</p>
@@ -152,23 +227,26 @@
                 <a href="#"><i class="fa fa-instagram"></i></a>
                 <a href="#"><i class="fa fa-twitter"></i></a>
                 <a href="#"><i class="fa fa-youtube"></i></a>
-                <p><a title="Find vores podcasts på Podbean" href="http://keacph.podbean.com" target="_blank"
+                <p>
+                    <a title="Find vores podcasts på Podbean" href="http://keacph.podbean.com" target="_blank"
                         rel="noopener" onclick="saAutomatedLink(this, 'outbound');">
-                        <img style="width: 150px; height: 56px; border: none; float: left;"
+                        <img style="width: 150px; height: 56px; border: none; float: left"
                             src="//www.podbean.com/images/badges/w600.png" alt="Download app'en til Podbean">
                     </a>
                 </p>
-
             </div>
 
             <div class="row">
                 <h3>Vejledning</h3>
                 <ul>
-                    <li><a href="/studiehandbog/studieadministration">Studieadministrationen</a></li>
-                    <li><a href="/studiehandbog/studie-og-karrierevejledning">Studie- og
-                            Karrierevejledning</a></li>
-                    <li><a href="/studiehandbog/sps">SPS (specialpædagogisk
-                            støtte)</a>
+                    <li>
+                        <a href="/studiehandbog/studieadministration">Studieadministrationen</a>
+                    </li>
+                    <li>
+                        <a href="/studiehandbog/studie-og-karrierevejledning">Studie- og Karrierevejledning</a>
+                    </li>
+                    <li>
+                        <a href="/studiehandbog/sps">SPS (specialpædagogisk støtte)</a>
                     </li>
                     <li><a href="/studiehandbog/su">SU-vejledning</a></li>
                     <li><a href="/praktik">Praktik</a></li>
@@ -179,32 +257,33 @@
                 <h3>Relevante links</h3>
                 <ul>
                     <li><a href="https://outlook.office.com/">KEA Webmail</a></li>
-                    <li><a href="http://bibliotek.kea.dk/">KEA
-                            Bibliotek</a>
+                    <li><a href="http://bibliotek.kea.dk/">KEA Bibliotek</a></li>
+                    <li>
+                        <a href="https://kea-fronter.itslearning.com/">Itslearning</a>
                     </li>
-                    <li><a href="https://kea-fronter.itslearning.com/">Itslearning</a>
+                    <li><a href="https://katalog.kea.dk/">Fag- og modulkatalog</a></li>
+                    <li>
+                        <a href="/studiehandbog/studieaktivitetsmodel">Studieaktivitetsmodel</a>
                     </li>
-                    <li><a href="https://katalog.kea.dk/">Fag- og
-                            modulkatalog</a></li>
-                    <li><a href="/studiehandbog/studieaktivitetsmodel">Studieaktivitetsmodel</a></li>
                     <li><a href="/?Itemid=1105">PARIS-aftalen</a></li>
-                    <li><a href="https://kea.dk/ordensregler">Ordensregler</a>
-                    </li>
+                    <li><a href="https://kea.dk/ordensregler">Ordensregler</a></li>
                 </ul>
             </div>
 
             <div class="row">
                 <h3>Praktisk info</h3>
                 <ul>
-                    <li><a href="https://kea.dk/cookies-og-privatliv">Cookies og
-                            privatliv</a></li>
-                    <li><a href="https://kea.dk/persondatapolitik">Persondatapolitik</a>
+                    <li>
+                        <a href="https://kea.dk/cookies-og-privatliv">Cookies og privatliv</a>
                     </li>
-                    <li><a href="https://www.was.digst.dk/kea-dk">Tilgængelighedserklæring</a>
+                    <li>
+                        <a href="https://kea.dk/persondatapolitik">Persondatapolitik</a>
+                    </li>
+                    <li>
+                        <a href="https://www.was.digst.dk/kea-dk">Tilgængelighedserklæring</a>
                     </li>
                     <li><a href="/studiehandbog/adresser">Find vej på KEA</a></li>
                 </ul>
-
             </div>
         </div>
     </footer>
