--- a/sub-category.html
+++ b/sub-category.html
@@ -79,18 +79,38 @@
       </div>
     </header>
     <main>
-      <!--    <li><a href="index.html">Forside/Category</a></li>
-      <li><a href="single-view.html">Single-Veiw</a></li> -->
-      <div class="container">
-        <article class="content">
-          <div class="h3-style">
-            <h3>Content Creator Gear</h3>
-          </div>
-          <div class="book-style"><p>Book Gear</p></div>
-          <div class="img-style">
-            <img src="image 5.jpg" alt="Kamera" />
-          </div>
-        </article>
+      <img
+        src="futureimg.jpg"
+        alt="hero image"
+        style="width: 100%; height: auto" />
+      <h1>Future</h1>
+      <h4 class="text-box">
+        | Herunder kan du læse om, samt booke, vores brede udvalg af udstyr i
+        Tech og Story Lab
+      </h4>
+      <div class="main-container">
+        <div class="container">
+          <template id="smallProductTemplate">
+            <article class="content">
+              <div class="content-2">
+                <span>Virtual Reality</span>
+              </div>
+              <ul class="list">
+                <li class="list-main">
+                  <a href="single-view.html">
+                    <span class="icon">►</span> Head-mounted Display (HMD)</a
+                  >
+                </li>
+
+                <li class="list-main">
+                  <a class="content-3" href="single-view.html">
+                    <span class="icon">►</span> Head-mounted Display (HMD)</a
+                  >
+                </li>
+              </ul>
+            </article></template
+          >
+        </div>
       </div>
     </main>
     <footer>
