--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
         alt="hero image"
         style="width: 100%; height: auto" />
       <ul>
-        <template
-          ><li><a href="sub-category.html">Sub-Category</a></li></template
-        >
+        <li><a href="sub-category.html">Sub-Category</a></li>
         <li><a href="single-view.html">Single-Veiw</a></li>
       </ul>
 
@@ -123,6 +121,28 @@
           kigge forbi eller sende os en mail.
         </p>
       </section>
+
+      Oliver Boskov Lindblad Larsen
+
+      <article class="content">
+        <div class="h3-style">
+          <h4>| Content Creator Gear</h4>
+        </div>
+        <template>
+          <div class="book-style">
+            <ol>
+              <li>
+                <a class="lille-p" href="sub-category.html?category=Objekt"
+                  >Book Gear</a
+                >
+              </li>
+            </ol>
+          </div>
+        </template>
+        <div class="img-style">
+          <img src="image 5.jpg" alt="Kamera" />
+        </div>
+      </article>
     </main>
     <footer>
       <div class="footer">
@@ -212,5 +232,6 @@
       </div>
     </footer>
     <script src="menu.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
