--- a/single-view.html
+++ b/single-view.html
@@ -82,9 +82,12 @@
       </div>
     </header>
     <main>
-      <li><a href="index.html">Forside/Category</a></li>
-      <li><a href="sub-category.html">Sub-Category</a></li>
-
+      <img
+        class="tech_logo"
+        src="Tech_Logo_1.svg"
+        alt="hero image"
+        style="width: 100%; height: auto"
+      />
       <div class="title_container">
         <h1 id="title_1">Canon Eos R7 Mirrorless camera 18-150mm Lens</h1>
       </div>
@@ -101,9 +104,9 @@
           <div class="product_info">
             <p>
               Canon EOS R7 er et spejlløst kamera med en 32,5 MP APS-C sensor og
-              hurtig autofokus, ideelt til action og detaljerede optagelser. Det
-              medfølgende 18-150mm objektiv giver alsidighed fra vidvinkel til
-              telefoto. Kameraet understøtter 4K video og har indbygget
+              hurtig autofokus, perfekt til action og detaljerede optagelser.
+              Det medfølgende 18-150mm objektiv giver alsidighed fra vidvinkel
+              til telefoto. Kameraet understøtter 4K video og har indbygget
               billedstabilisering.
             </p>
 
