--- a/sub-category.html
+++ b/sub-category.html
@@ -10,12 +10,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
     <title>Sub-Category</title>
   </head>
 
@@ -55,7 +57,8 @@
             y="0px"
             width="20"
             height="20"
-            viewBox="0,0,256,256">
+            viewBox="0,0,256,256"
+          >
             <g
               fill="#ffffff"
               fill-rule="nonzero"
@@ -68,10 +71,12 @@
               stroke-dashoffset="0"
               font-family="none"
               font-size="none"
-              style="mix-blend-mode: normal">
+              style="mix-blend-mode: normal"
+            >
               <g transform="scale(10.66667,10.66667)">
                 <path
-                  d="M10,2c-4.40644,0 -8,3.59357 -8,8c0,4.40643 3.59356,8 8,8c1.84402,0 3.54097,-0.63457 4.89648,-1.68945l5.39649,5.39648c0.25082,0.26124 0.62327,0.36648 0.97371,0.27512c0.35044,-0.09136 0.62411,-0.36503 0.71547,-0.71547c0.09136,-0.35044 -0.01388,-0.72289 -0.27512,-0.97371l-5.39648,-5.39648c1.05488,-1.35551 1.68945,-3.05246 1.68945,-4.89648c0,-4.40643 -3.59356,-8 -8,-8zM10,4c3.32556,0 6,2.67445 6,6c0,3.32555 -2.67444,6 -6,6c-3.32556,0 -6,-2.67445 -6,-6c0,-3.32555 2.67444,-6 6,-6z"></path>
+                  d="M10,2c-4.40644,0 -8,3.59357 -8,8c0,4.40643 3.59356,8 8,8c1.84402,0 3.54097,-0.63457 4.89648,-1.68945l5.39649,5.39648c0.25082,0.26124 0.62327,0.36648 0.97371,0.27512c0.35044,-0.09136 0.62411,-0.36503 0.71547,-0.71547c0.09136,-0.35044 -0.01388,-0.72289 -0.27512,-0.97371l-5.39648,-5.39648c1.05488,-1.35551 1.68945,-3.05246 1.68945,-4.89648c0,-4.40643 -3.59356,-8 -8,-8zM10,4c3.32556,0 6,2.67445 6,6c0,3.32555 -2.67444,6 -6,6c-3.32556,0 -6,-2.67445 -6,-6c0,-3.32555 2.67444,-6 6,-6z"
+                ></path>
               </g>
             </g>
           </svg>
@@ -79,21 +84,40 @@
       </div>
     </header>
     <main>
-      <!--    <li><a href="index.html">Forside/Category</a></li>
-      <li><a href="single-view.html">Single-Veiw</a></li> -->
-      <div class="container">
-        <div class="content">
-          <span>Virtual Reality</span>
+      <img
+        class="tech_logo"
+        src="Tech_Logo_1.svg"
+        alt="hero image"
+        style="width: 100%; height: auto"
+      />
+      <h1>Future</h1>
+      <h4 class="text-box">
+        | Herunder kan du læse om, samt booke, vores brede udvalg af udstyr i
+        Tech og Story Lab
+      </h4>
+      <div class="main-container">
+        <div class="container">
+          <template id="smallProductTemplate">
+            <article class="content">
+              <div class="content-2">
+                <span>Virtual Reality</span>
+              </div>
+              <ul class="list">
+                <li class="list-main">
+                  <a href="single-view.html">
+                    <span class="icon">►</span> Head-mounted Display (HMD)</a
+                  >
+                </li>
+
+                <li class="list-main">
+                  <a class="content-3" href="single-view.html">
+                    <span class="icon">►</span> Head-mounted Display (HMD)</a
+                  >
+                </li>
+              </ul>
+            </article></template
+          >
         </div>
-        <template id="smallProductTemplate">
-          <ul class="list">
-            <li>
-              <a href="single-view.html">
-                <span class="icon">►</span> Head-mounted Display (HMD)</a
-              >
-            </li>
-          </ul>
-        </template>
       </div>
     </main>
     <footer>
