--- a/single-view.html
+++ b/single-view.html
@@ -141,7 +141,7 @@
               required
             />
 
-            <button id="reserver_btn">Reserver</button>
+            <button id="reserver_btn" name="Reserver">Reserver</button>
           </form>
         </div>
       </div>
